feat(server): add password change route
